Fix token layout issue

--- a/src/token/token.css
+++ b/src/token/token.css
@@ -85,6 +85,10 @@
   width: auto;
   display: inline-block;
   margin-bottom: 20px;
+  margin-right: 15px;
+  position: relative;
+  top: 2px;
+  left: -5px;
 }
 
 .token-dialog .create-token-pane > button {
@@ -119,7 +123,4 @@
 .token-dialog label[data-balloon]:before {
   margin-left: 115px;
   width: 275px;
-}
-[data-balloon] {
-  border-bottom: 3px solid #F2F2F2;
 }
